# palettetown

./: LICENSE  README.md  setup.cfg  tox.ini
etc/: examples.ipynb  fill_pokedex.py
src/palettetown/: pokedex.py  pokemon.py  pokeplot.py
src/palettetown/data/: pokedex.json
tests/: test_pokedex.py  test_pokemon.py  test_pokeplot.py
