[metadata]
name = palettetown
version = 1.0.1
author = James Rowland
author_email = rowland.208@gmail.com
description = Style plots with Pokemon colors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rowland-208/palettetown
project_urls =
    Bug Tracker = https://github.com/rowland-208/palettetown/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires =
    cycler
    matplotlib
    numpy
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
palettetown.data =
    pokedex.json
palettetown.data.sprites =
    *.png
